# cmake

./: CMakeLists.txt  README.md  tut.cpp  tut.h.in
Mathfunc/: CMakeLists.txt  mysqrt.cpp
src/: CMakeLists.txt
src/hellolib/: CMakeLists.txt
src/hellolib/include/: hello.h
src/hellolib/src/: hello.cpp
